--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <title>Orlando Anderegg Blog</title>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <link rel="icon" href="/favicon.ico?v=1" type="image/icon">
-<link href="/style.css" rel="stylesheet"></head>
+<link href="/blog/style.css" rel="stylesheet"></head>
 <body>
 <div id="app"></div>
 <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
 <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-<script type="text/javascript" src="/vendors~main.bundle.js"></script><script type="text/javascript" src="/main.bundle.js"></script></body>
+<script type="text/javascript" src="/blog/vendors~main.bundle.js"></script><script type="text/javascript" src="/blog/main.bundle.js"></script></body>
 
 </html>
